Ticket 198 completed courses page card alignments fixed cross check tickets 189 and 190

--- a/src/Views/StaticSite/Components/BrowseCourses/style.scss
+++ b/src/Views/StaticSite/Components/BrowseCourses/style.scss
@@ -16,7 +16,8 @@
         }
         .course-grid{
             display: grid;
-            grid-template-columns: repeat(auto-fill,320px);
+            // grid-template-columns: repeat(auto-fill,320px);
+            grid-template-columns: repeat(3, 1fr);
             gap: 2rem;
         }
         .accordion__item{
