--- a/src/Views/StaticSite/Views/Courses/Views/style.scss
+++ b/src/Views/StaticSite/Views/Courses/Views/style.scss
@@ -295,7 +295,8 @@
 
     .course-grid {
         display: grid;
-        grid-template-columns: repeat(auto-fill, 320px);
+        // grid-template-columns: repeat(auto-fill, 320px);
+        grid-template-columns: repeat(3, 1fr);
         gap: 2rem;
     }
 
